kubernetes/main/apps/home-automation/rtlamr2mqtt/app/networkpolicy.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: rtlamr2mqtt
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: rtlamr2mqtt
  egress:
    # mosquitto
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: mosquitto
      toPorts:
        - ports:
            - port: "1883"
              protocol: TCP
